# ooqp_eigen_interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: Findooqp.cmake
include/: ooqpei_assert_macros.hpp  ooqpei_gtest_eigen.hpp  ooqpei_numerical_comparisons.hpp
include/ooqp_eigen_interface/: OoqpEigenInterface.hpp  QuadraticProblemFormulation.hpp  ooqpei_gtest_eigen.hpp  ooqpei_source_file_pos.hpp
src/: OoqpEigenInterface.cpp  QuadraticProblemFormulation.cpp
test/: CMakeLists.txt  OoqpEigenInterface_test.cpp  QuadraticProblemFormulation_test.cpp  test_main.cpp
test/matlab/: OoqpEigenInterface_test.m  QuadraticProblemFormulation_test.m
