<?xml version="1.0"?>
<package>
  <name>ooqp_eigen_interface</name>
  <version>0.0.0</version>
  <description>ooqp_eigen_interface</description>
  <maintainer email="pfankhauser@ethz.ch">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <author email="pfankhauser@ethz.ch">Péter Fankhauser</author>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>ooqpgensparse</build_depend>
  <build_depend>ooqpsparse</build_depend>
  <build_depend>ooqpgondzio</build_depend>
  <build_depend>ooqpbase</build_depend>
  <build_depend>blas</build_depend>
  <build_depend>ma27</build_depend>
  <build_depend>gfortran</build_depend>
  
  <test_depend>gtest</test_depend>
</package>